workshop-1/monolith-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mythical-mysfits-eks
  namespace: default
  labels:
    app: mythical-mysfits-eks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mythical-mysfits-eks
  template:
    metadata:
      labels:
        app: mythical-mysfits-eks
    spec:
      serviceAccount: mythical-misfit
      containers:
        - name: mythical-mysfits-eks
          image: 133483808259.dkr.ecr.us-east-2.amazonaws.com/cfn-container-mono-iakne8tggez7:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mythical-mysfits-eks
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: mythical-mysfits-eks
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
