workshop-1/nolikeservice-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mythical-mysfits-nolike
  namespace: default
  labels:
    app: mythical-mysfits-nolike
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mythical-mysfits-nolike
  template:
    metadata:
      labels:
        app: mythical-mysfits-nolike
    spec:
      serviceAccount: mythical-misfit
      containers:
        - name: mythical-mysfits-nolike
          image: 133483808259.dkr.ecr.us-east-2.amazonaws.com/cfn-container-mono-iakne8tggez7:nolike
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mythical-mysfits-nolike
  namespace: default
spec:
  type: NodePort
  selector:
    app: mythical-mysfits-nolike
  ports:
    -  protocol: TCP
       port: 80
       targetPort: 80
